added loading animation

--- a/src/App.css
+++ b/src/App.css
@@ -133,5 +133,9 @@ footer{
 .blog-writer-details{
   margin: 1rem 0 1.5rem 0;
 }
+.blogContainer{
+  margin-top: 10rem;
+  /* margin-bottom: 4rem; */
+}
 
 }
