--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,4 +1,18 @@
-nav{
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 2.5rem 2rem;
+  width: 100%;
+  margin: 0 auto;
+  background: linear-gradient(180deg, #ffffff 0%, rgba(140, 148, 172, 0) 100%);
+}
+
+/* nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -10,36 +24,65 @@ nav{
     width: 100%;
     margin: 0 auto;
     background: linear-gradient(180deg, #FFFFFF 0%, rgba(140, 148, 172, 0) 100%);
+} */
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
-.logo{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+.logo-icon {
+  font-size: 2.5rem;
 }
-.logo-icon{
-    font-size: 2.5rem;
+.logo h1 {
+  font-size: 2.5rem;
+  font-weight: 900;
+  color: rgb(58, 58, 58);
+  font-family: "Abhaya Libre", serif;
+  text-transform: uppercase;
 }
-.logo h1{
-    font-size: 2.5rem;
-    font-weight: 900;
-    color: rgb(58, 58, 58);
-    font-family: "Abhaya Libre", serif;
-    text-transform: uppercase;
+#navbar {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  gap: 3rem;
 }
-.nav-menu{
-    display: flex;
-    align-items: center;
-    list-style-type: none;
-    gap: 3rem;
+#navbar li {
+  font-size: 1.5rem;
+  cursor: pointer;
 }
-.nav-menu li{
-    font-size: 1.5rem;
-    cursor: pointer;
+.nav-icon {
+  display: none;
 }
 
-@media(max-width:640px){
-    nav{
-        background: #fff;
-        /* background: linear-gradient(180deg, #FFFFFF 5%, rgba(255, 255, 255, 0) 100%); */
-      }
+@media (max-width: 900px) {
+ header {
+    background: #fff;
+    /* background: linear-gradient(180deg, #FFFFFF 5%, rgba(255, 255, 255, 0) 100%); */
+  }
+  #navbar{
+    position: absolute;
+    top: 80px;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 100vh;
+    width: 100%;
+    background: #fff;
+    padding: 3rem 2rem 3rem ;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    transition: 0.3s ease-in-out;
+}
+  .nav-icon {
+    display: block;
+    /* margin-right: 2rem; */
+  }
+  .iconn {
+    font-size: 2rem;
+    color: #000;
+  }
+  #navbar.active {
+    right: -100%;
+  }
 }
