--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,6 @@ a{
 .blog-snippet-image{
   width: 100%;
   margin: 3% auto;
-  
 }
 .blog-snippet-image img{
   width: 100%;
@@ -153,6 +152,14 @@ footer{
 .blogContainer{
   margin-top: 10rem;
   /* margin-bottom: 4rem; */
+}
+.blog-snippet-image img{
+  height: 250px;
+  border-radius: 8px;
+}
+.blog-image img{
+  width: 100%;
+  height: 280px;
 }
 
 }
